package domain.transporte;public class ServicioContratado {
}
