package domain.transporte;public class TransportePublico {
}
