@startuml DDS

    class Organizacion {
        razonSocial
        tipo
        clasificacion
        ubicacionLLegada
        areas[]
        miembros[]
              
        ubicacion()
        clasificación()
        aceptarVinculacion(miembro)
    }

    class Miembro{
        nombre
        apellido
        tipoDoc
        numDoc
        susOrgonazaciones[]
        susAreas[]*

        registrarTrayecto(ubicacionOrigen,ubicacionLLegada,transporte) 
        vincular(organizacion)
    }

    class Administrador{
        confiugrarParametros(parametro,valor)
        darAltaorganizacion(organizacion)
        darDeAltaSectores(unSector, organizacion)
        darDeAltaTransporte()
        
    }
    abstract MedioDeTransporte{
        tipo
    }
    class vehiculoParticular,{
        tipo
        combustible

    }
    class servicioContratado{
        tipo
        
    }
    class transportePublico{
        tipo
    }


    class Areas{
        liquidarSueldo()
        
    }
    class RelMiembroArea{
        Miembro
        Organizacion
        area
    }
    

    


Organizacion "*"<--"*" Miembro
MedioDeTransporte "*"<-- Miembro
Organizacion "*"<-- Administrador
MedioDeTransporte "*"<-- Administrador
Miembro "*"<-- Administrador
Areas "*"<-- Miembro
Areas "*"<-- Organizacion
MedioDeTransporte "*"<-- vehiculoParticular
MedioDeTransporte "*"<-- servicioContratado
MedioDeTransporte "*"<-- transportePublico



@enduml


Entidades:

- Organizacion 
    -razon solcial
    -Tipo: Gubernamental, ONG, Empresa, Institución
    -Ubicacion
    -Clasificacion: Ministerio, Universidad, Escuela, Empresa del sector primario, Empresa del sector secundario, etc.
    -Areas
    -Miembros


- Agente sectorial (por ahora no tenemos nada)


- Miembro de Org.
    -nombre
    -apellido
    -tipo y nro Documento
    -sus Organizaciones
    -sus Areas
    -Trayectos[]
    
-Trayecto (Tenemos duda de esto)
    -tramos[]
    

-Tramo
    -origen
    -destino
    -medioDeTransporte

Entidades secundarias:


-Administrador

-MedioDeTransporte
    -tipo 